--- a/Prueba1/IntraCampus/own.css
+++ b/Prueba1/IntraCampus/own.css
@@ -23,25 +23,25 @@
 }
 .demo-card-square > .capacitaciones{
   color: #fff;
-  background: url('http://campus.unla.edu.ar/wp-content/themes/tyros/inc/images/cta/presenteunla.png') bottom right 10% no-repeat #ff0080;
+  background: url('../IntraCampus/i/capacitaciones-nocolor.png') bottom right 10% no-repeat #ff0080;
 }
 .demo-card-square > .aulas{
   color: #fff;
-  background: url('http://campus.unla.edu.ar/wp-content/themes/tyros/inc/images/cta/proyectos.png') bottom right 10% no-repeat #0000ff;
+  background: url('../IntraCampus/i/aulas-nocolor.png') bottom right 10% no-repeat #0000ff;
 }
 .demo-card-square > .usuarios{
   color: #fff;
-  background: url('http://campus.unla.edu.ar/wp-content/themes/tyros/inc/images/cta/estudiantes.png') bottom right 10% no-repeat #ff8000;
+  background: url('../IntraCampus/i/usuarios-nocolor.png') bottom right 10% no-repeat #ff8000;
 }
 
 .header{
 	height: 80px;
 	background-color: #ffffff;
-	border-bottom: 3px dashed #18479A;
+	border-bottom: 3px solid #00A6DF;
 }
 
 .background{
-	background-color: #F1F4F8;
+	background-image: url('../IntraCampus/i/background-index.jpg')
 }
 .mdl-layout__header-row {
 	background-color: #72BCF7;
