--- a/Prueba1/IntraCampus/own.css
+++ b/Prueba1/IntraCampus/own.css
@@ -23,15 +23,15 @@
 }
 .demo-card-square > .capacitaciones{
   color: #fff;
-  background: url('../IntraCampus/i/capacitaciones-nocolor.png') bottom right 10% no-repeat #ff0080;
+  background: url('../IntraCampus/i/capacitaciones-nocolor.png') bottom right 10% no-repeat #14BAE8;
 }
 .demo-card-square > .aulas{
   color: #fff;
-  background: url('../IntraCampus/i/aulas-nocolor.png') bottom right 10% no-repeat #0000ff;
+  background: url('../IntraCampus/i/aulas-nocolor.png') bottom right 10% no-repeat #FF0084;
 }
 .demo-card-square > .usuarios{
   color: #fff;
-  background: url('../IntraCampus/i/usuarios-nocolor.png') bottom right 10% no-repeat #ff8000;
+  background: url('../IntraCampus/i/usuarios-nocolor.png') bottom right 10% no-repeat #527EDD;
 }
 
 .header{
