--- a/Prueba1/IntraCampus/own.css
+++ b/Prueba1/IntraCampus/own.css
@@ -23,15 +23,15 @@
 }
 .demo-card-square > .capacitaciones{
   color: #fff;
-  background: url('../IntraCampus/i/capacitaciones-nocolor.png') bottom right 10% no-repeat #14BAE8;
+  background: url('../IntraCampus/i/capacitaciones-nocolor.png') bottom right 10% no-repeat #673AB7;
 }
 .demo-card-square > .aulas{
   color: #fff;
-  background: url('../IntraCampus/i/aulas-nocolor.png') bottom right 10% no-repeat #FF0084;
+  background: url('../IntraCampus/i/aulas-nocolor.png') bottom right 10% no-repeat #009688;
 }
 .demo-card-square > .usuarios{
   color: #fff;
-  background: url('../IntraCampus/i/usuarios-nocolor.png') bottom right 10% no-repeat #527EDD;
+  background: url('../IntraCampus/i/usuarios-nocolor.png') bottom right 10% no-repeat #2196F3;
 }
 
 .header{
@@ -41,7 +41,12 @@
 }
 
 .background{
-	background-image: url('../IntraCampus/i/background-index.jpg')
+background: url('../IntraCampus/i/background.jpg') no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+	
 }
 .mdl-layout__header-row {
 	background-color: #72BCF7;
@@ -49,4 +54,7 @@
 .mdl-layout__header-row img{
 	margin: 0 0 0 auto;
 	max-width: 100px;
+}
+.mdl-button {
+	text-align: left;
 }
