--- a/Prueba1/IntraCampus/own.css
+++ b/Prueba1/IntraCampus/own.css
@@ -25,10 +25,10 @@
 	height: 320px;
 }
 
-.demo-card-square>.capacitaciones {
+.demo-card-square>.usuarios {
 	color: #fff;
-	background: url("../IntraCampus/i/capacitaciones-nocolor.png") bottom
-		right 10% no-repeat #673AB7;
+	background: url("../IntraCampus/i/usuarios-nocolor.png") bottom right
+		10% no-repeat #2196F3;
 }
 
 .demo-card-square>.aulas {
@@ -37,14 +37,13 @@
 		no-repeat #009688;
 }
 
-.demo-card-square>.usuarios {
+.demo-card-square>.capacitaciones {
 	color: #fff;
-	background: url("../IntraCampus/i/usuarios-nocolor.png") bottom right
-		10% no-repeat #2196F3;
+	background: url("../IntraCampus/i/capacitaciones-nocolor.png") bottom
+		right 10% no-repeat #673AB7;
 }
 
 .header {
-	height: 80px;
 	background-color: #ffffff;
 	border-bottom: 3px solid #00A6DF;
 }
@@ -69,4 +68,10 @@
 
 .mdl-button {
 	text-align: left;
+}
+
+.mdl-mini-footer__left-section img {
+	height: 40px;
+	float: left;
+	margin-right: 10px;
 }
