--- a/Prueba1/own.css
+++ b/Prueba1/own.css
@@ -50,7 +50,7 @@
 
 /*INDEX CLASSES*/
 .index {
-	/*background: url("../GestionCampus/i/background.jpg") no-repeat center center fixed;*/
+	/*background: url("../i/background.jpg") no-repeat center center fixed;*/
 	background-color: #ebebeb;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
@@ -73,19 +73,19 @@
 
 .index .demo-card-square>.usuarios {
 	color: #fff;
-	background: url("../GestionCampus/i/usuarios-nocolor.png") bottom right
+	background: url("../i/usuarios-nocolor.png") bottom right
 		10% no-repeat #2196f3;
 }
 
 .index .demo-card-square>.aulas {
 	color: #fff;
-	background: url("../GestionCampus/i/aulas-nocolor.png") bottom right 10%
+	background: url("../i/aulas-nocolor.png") bottom right 10%
 		no-repeat #009688;
 }
 
 .index .demo-card-square>.capacitaciones {
 	color: #fff;
-	background: url("../GestionCampus/i/capacitaciones-nocolor.png") bottom
+	background: url("../i/capacitaciones-nocolor.png") bottom
 		right 10% no-repeat #673ab7;
 }
 
@@ -109,7 +109,7 @@
 
 .alta-usuario .demo-card-square>.mdl-card__title {
 	color: #fff;
-	background: url("../GestionCampus/i/excel-ico.png") bottom right 15%
+	background: url("../i/excel-ico.png") bottom right 15%
 		no-repeat #207347;
 }
 
